Change Docker publish to manual trigger for feature branches

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,12 +4,17 @@ on:
   push:
     branches:
       - main
-      - feature/unified-docker
     tags:
       - 'v*'
   pull_request:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Optional tag for the image (e.g., beta, test)'
+        required: false
+        default: ''
 
 env:
   REGISTRY: docker.io
