--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: krakenly/krakenly
+  IMAGE_NAME: laveeshbansal/krakenly
 
 jobs:
   build-and-push:
