--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,12 +1,14 @@
 [supervisord]
 nodaemon=true
 user=root
-logfile=/var/log/supervisor/supervisord.log
+logfile=/dev/stdout
+logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 
 [program:api]
 command=/bin/bash -c "gunicorn --bind 0.0.0.0:5000 --workers ${API_WORKERS:-2} --threads ${API_THREADS:-2} --timeout ${API_TIMEOUT:-300} --preload app:app"
 directory=/app
+user=www-data
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
