--- a/k8s/chromadb.yaml
+++ b/k8s/chromadb.yaml
@@ -23,6 +23,7 @@ spec:
       containers:
         - name: chromadb
           image: chromadb/chroma:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
               name: http
