--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -34,7 +34,13 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build -t krakenly/krakenly:local .
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: krakenly/krakenly:local
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Start services with Docker Compose
         run: |
@@ -103,7 +109,13 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        run: docker build -t krakenly/krakenly:local .
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: krakenly/krakenly:local
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Install minikube
         run: |
