--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -19,11 +19,11 @@ on:
         type: boolean
 
 jobs:
-  docker-integration:
-    name: Docker Compose Integration
+  build:
+    name: Build Docker Image
     runs-on: ubuntu-latest
     if: |
-      github.event_name == 'workflow_dispatch' && inputs.test_docker ||
+      github.event_name == 'workflow_dispatch' ||
       github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'ready-to-merge')
 
     steps:
@@ -33,14 +33,42 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
+      - name: Build and export Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          load: true
           tags: krakenly/krakenly:local
+          outputs: type=docker,dest=/tmp/krakenly-image.tar
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image
+          path: /tmp/krakenly-image.tar
+          retention-days: 1
+
+  docker-integration:
+    name: Docker Compose Integration
+    runs-on: ubuntu-latest
+    needs: build
+    if: |
+      github.event_name == 'workflow_dispatch' && inputs.test_docker ||
+      github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'ready-to-merge')
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image
+          path: /tmp
+
+      - name: Load Docker image
+        run: docker load -i /tmp/krakenly-image.tar
 
       - name: Start services with Docker Compose
         run: |
@@ -97,6 +125,7 @@ jobs:
   k8s-integration:
     name: Kubernetes Integration
     runs-on: ubuntu-latest
+    needs: [build, docker-integration]
     if: |
       github.event_name == 'workflow_dispatch' && inputs.test_k8s ||
       github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'ready-to-merge')
@@ -105,22 +134,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v4
         with:
-          context: .
-          load: true
-          tags: krakenly/krakenly:local
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          name: docker-image
+          path: /tmp
+
+      - name: Load Docker image
+        run: docker load -i /tmp/krakenly-image.tar
+
+      - name: Cache minikube
+        uses: actions/cache@v4
+        with:
+          path: /usr/local/bin/minikube
+          key: minikube-latest-linux-amd64
 
       - name: Install minikube
         run: |
-          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube-linux-amd64 /usr/local/bin/minikube
+          if [ ! -f /usr/local/bin/minikube ]; then
+            curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+            sudo install minikube-linux-amd64 /usr/local/bin/minikube
+          else
+            echo "minikube already cached"
+          fi
 
       - name: Start minikube
         run: |
