fix: standardize on docker compose v2, add timeouts, complete ingress paths
- Replace docker-compose (v1) with docker compose (v2) across all files
- Update install-docker-prereqs.sh to specify Ubuntu/Debian support only
- Add 15-minute timeout to LLM model pull steps in CI
- Add missing API paths to ingress (/stats, /list, /models)

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -91,6 +91,7 @@ jobs:
           exit 1
 
       - name: Pull LLM model
+        timeout-minutes: 15
         run: |
           docker exec krakenly-ollama ollama pull qwen2.5:3b
 
@@ -194,6 +195,7 @@ jobs:
           sleep 5
 
       - name: Pull LLM model
+        timeout-minutes: 15
         run: |
           kubectl -n krakenly exec deploy/ollama -- ollama pull qwen2.5:3b
 
