--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.10-slim
 WORKDIR /app
 
 # Install curl for health checks
+# hadolint ignore=DL3008
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     && apt-get clean \
@@ -11,8 +12,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Copy and install dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt \
+# hadolint ignore=DL3013
+RUN pip install --no-cache-dir -r requirements.txt \
     && rm -rf /root/.cache/pip
 
 # Copy application code
@@ -34,4 +35,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
 # API_THREADS: threads per worker (default: 2)
 # API_TIMEOUT: request timeout in seconds (default: 300)
 # Using --preload to load embedding model once and share across workers
-CMD sh -c "gunicorn --bind 0.0.0.0:5000 --workers ${API_WORKERS:-2} --threads ${API_THREADS:-2} --timeout ${API_TIMEOUT:-300} --preload app:app"
+CMD ["sh", "-c", "gunicorn --bind 0.0.0.0:5000 --workers ${API_WORKERS:-2} --threads ${API_THREADS:-2} --timeout ${API_TIMEOUT:-300} --preload app:app"]
