--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -5,3 +5,8 @@ requests==2.31.0
 fastembed==0.3.6
 chromadb-client==1.0.0
 numpy<2.0
+
+# Testing dependencies
+pytest>=7.0.0
+pytest-mock>=3.10.0
+pytest-cov>=4.0.0
